--- a/styles/home.css
+++ b/styles/home.css
@@ -5,6 +5,15 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+:root {
+  --orange: rgb(66, 78, 82);
+  --darkorange: rgb(129, 204, 229);
+  --platinum: rgb(124, 154, 164);
+  --black: #2b2d42;
+  --white: #fff;
+  --thumb: #edf2f4;
+}
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -131,8 +140,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-left: 80px;
   width: 100%;
-  height: 40vh;
+  height: auto;
   background-color: lightgray;
   box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.1);
 }
@@ -144,6 +154,7 @@
 .contact-btn {
   height: 50px;
   width: 170px;
+  margin: 5px;
   background-color: transparent;
   border: none;
   font-size: 1.2rem;
@@ -161,6 +172,36 @@
 
 .title-intro {
   font-size: 3.5rem;
+}
+
+@media only screen and (min-width: 5000px) {
+  .title-intro {
+    font-size: 4rem;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .title-intro {
+    font-size: 3rem;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .title-intro {
+    font-size: 2.5rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .title-intro {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .title-intro {
+    font-size: 1.5rem;
+  }
 }
 
 .title-intro span {
@@ -186,26 +227,218 @@
 }
 
 .about-container {
+  margin-left: 80px;
+  max-width: 1400px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.about-title {
+  font-size: 32px;
+  margin: 1em 0 0 5%;
+  margin-left: 80px;
+}
+
+.about-boxes {
+  margin-left: 80px;
+  display: grid;
+  grid-auto-columns: 100%;
+  grid-column-gap: 10px;
+  grid-auto-flow: column;
+  padding: 25px 0px;
+  list-style: none;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+}
+
+.about-box {
+  margin-left: 2.5%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  background: var(--white);
+  border-radius: 12px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 15%);
+  scroll-snap-align: start;
+  transition: all 0.2s;
+}
+
+.about-box:hover {
+  color: var(--white);
+  background: var(--orange);
+}
+
+.i-wrapper-about {
+  margin: 5px 0 0 20px;
+  font-size: 2rem;
+}
+
+.about-box .about-box-title {
+  font-size: 20px;
+}
+
+.about-box .about-box-content {
+  margin: 20px 0;
+  max-width: 85%;
+}
+
+.about-btn {
+  height: 30px;
+  width: 90%;
+  background-color: lightblue;
+}
+
+.about-box .about-box-link-wrapper {
+  margin-top: auto;
+}
+
+.about-box-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 80px; /* Adjust based on sidebar width */
+  width: 90%;
+  text-decoration: none;
+  color: white;
+  background: var(--platinum);
+  padding: 6px 12px;
+  border-radius: 8px;
+  transition: background 0.2s;
 }
 
-.about-grid {
+.about-box:hover {
+  display: inline-block;
+  text-decoration: none;
+  color: white;
+  background: var(--orange);
+  padding: 6px 12px;
+  border-radius: 8px;
+  transition: background 0.2s;
+}
+
+.about-boxes::-webkit-scrollbar {
+  height: 12px;
+}
+
+.about-boxes::-webkit-scrollbar-track {
+  border-radius: 92px;
+}
+
+.about-boxes::-webkit-scrollbar-thumb {
+  background: var(--darkorange);
+}
+
+.about-boxes::-webkit-scrollbar-track {
+  background: var(--thumb);
+}
+
+@media (min-width: 500px) {
+  .about-boxes {
+    grid-auto-columns: calc(50% - 10px);
+    grid-column-gap: 20px;
+  }
+}
+
+@media (min-width: 700px) {
+  .about-boxes {
+    grid-auto-columns: calc(calc(100% / 3) - 20px);
+    grid-column-gap: 30px;
+  }
+}
+
+@media (min-width: 1100px) {
+  .about-boxes {
+    grid-auto-columns: calc(25% - 30px);
+    grid-column-gap: 40px;
+  }
+}
+
+.work-container {
+  margin-top: 5vh;
+  margin-left: 80px;
+  background-color: lightgray;
+  padding-bottom: 20px;
+}
+
+.work-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1 300px;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
+  grid-template-rows: repeat(3 300px);
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
   margin: 10vh 5vw;
 }
 
+.work-container-h4 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 80px;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-work-p {
+  opacity: 0;
+}
+
+.info-work-p {
+  padding: 5px;
+  border-radius: 5px;
+  width: 15vw;
+  height: auto;
+  background-color: white;
+  transition: 0.5s;
+  font-size: 0.9rem;
+}
+
+@media only screen and (max-width: 1000px) {
+  .info-work-p {
+    width: 40vw;
+  }
+}
+
+.work-container-h4 i:hover + .info-work-p {
+  opacity: 1;
+}
+
+.work-container-h4 i:hover {
+  cursor: pointer;
+}
+
+.work-h4 {
+  margin-top: 20px;
+  font-size: 2rem;
+}
+
 @media only screen and (max-width: 800px) {
-  .about-grid {
+  .work-h4 {
+    font-size: 1.5rem;
+  }
+}
+
+.work-grid i {
+  font-size: 4rem;
+  margin: 10px;
+}
+
+.work-grid div {
+  display: flex;
+  background-color: rgb(248, 248, 248);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  height: 300px;
+  border-color: black;
+  border: solid;
+  border-radius: 5px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .work-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1 250px;
+    grid-template-rows: repeat(5 300px);
     grid-column-gap: 20px;
     grid-row-gap: 20px;
     margin: 10vh 5vw;
@@ -213,7 +446,7 @@
 }
 
 @media only screen and (max-width: 550px) {
-  .about-grid {
+  .work-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: 1 200px 200px;
@@ -223,57 +456,176 @@
   }
 }
 
-.about-grid div {
-  margin: 0;
-  height: 200px;
-  border-color: black;
-  border: solid;
-  border-radius: 5px;
+.prijzen-container {
+  margin-left: 80px;
 }
 
-.waarom-ons-container {
+.prijzen-intro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.prijzen-intro h4 {
+  font-size: 2.5rem;
+}
+
+@media only screen and (max-width: 1000px) {
+  .prijzen-intro h4 {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .prijzen-intro h4 {
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .prijzen-intro h4 {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .prijzen-intro h4 {
+    font-size: 1.5rem;
+  }
+}
+
+.prijzen {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 5%;
+  gap: 30px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .prijzen {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .prijzen {
+    grid-template-columns: 1fr;
+  }
+}
+
+.prijzen-box {
+  height: auto;
+  border: solid;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border: solid;
+}
+
+.prijs1-img {
+  width: 100%;
+  height: 200px;
+}
+
+.title-prijzen-box {
+  margin-left: 20px;
+  margin-bottom: 40px;
+  position: relative;
+  top: 20px;
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-underline-offset: 5px;
+  color: blue;
+}
+
+.prijzen-box p {
+  padding-left: 15px;
+  margin-left: 40px;
+  font-family: cursive;
+  font-style: italic;
+}
+
+.prijzen-info {
+  width: 95%;
+}
+
+.prijzen-info div {
+  width: 95%;
+  padding-left: 30px;
+  height: 50px;
+  margin: 10px 0;
+  font-size: 1.2rem;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+
+.prijs1 {
+  margin: 0 20px 20px 20px;
+  font-size: 2rem;
+  color: blue;
+}
+
+.beginprijs {
+  margin-top: 30px;
+}
+
+.contact-prijs-btn {
+  margin: 30px;
+  height: 40px;
+  width: 90%;
+  background-color: lightblue;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  transition: 0.25s;
+}
+
+.contact-prijs-btn:hover {
+  cursor: pointer;
+  background-color: rgb(6, 163, 119);
+}
+
+.contact-container {
   margin-left: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.waarom-ons {
-  margin-top: 10px;
-  font-size: 2.5rem;
-}
-
-.grid-box {
-  padding: 5px;
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  background-color: lightgray;
+  padding: 20px;
 }
 
-.grid-box i {
-  font-size: 3rem;
-  margin-bottom: 10px;
+.contact-form {
+  font-size: 2rem;
+  margin: 10px;
 }
 
-.grid-box h4 {
-  width: 95%;
-  font-weight: 500;
-  font-size: 1rem;
-  color: rgb(111, 109, 109);
-  margin-bottom: 5px;
+.contact-grid {
+  font-size: 1.5rem;
+  display: grid;
+  grid-template-columns: 1 20vw;
+  grid-template-rows: repeat(4 35px);
+  gap: 20px;
 }
 
-.about-grid-btn {
-  margin-top: 30px;
-  height: 40px;
-  width: 95%;
-  background-color: lightblue;
-  border: none;
-  border-radius: 5px;
+input {
+  width: 20vw;
+  height: 35px;
+  border-radius: 3px;
 }
 
-.about-grid-btn:hover {
-  cursor: pointer;
+.contact-submit-btn {
+  background-color: rgb(176, 0, 176);
+  width: 7vw;
+  height: 30px;
+  border-radius: 10px;
+  color: white;
+}
+
+.contact-submit-btn:hover {
+  background-color: pink;
+  color: black;
+  transition: 0.3s;
 }
